# pixel-sort

./: CMakeLists.txt  README.md
include/: AnimatedPixel.h
src/: AnimatedPixel.cpp  CMakeLists.txt  main.cpp
